# greeting_otel_lib

./: Cargo.toml
src/: lib.rs
