[package]
name = "greeting_otel"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = {version = "0.25.0",features = ["metrics", "logs"] }
opentelemetry_sdk = {version = "0.25.0",  features = ["rt-tokio", "logs"] }
opentelemetry-otlp = {version = "0.25.0",  features = ["tonic", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.25.0"
opentelemetry-appender-tracing = {  version = "0.25.0",default-features = false}

tracing-subscriber= {version= "0.3.18",features = ["env-filter","registry", "std"]}
tracing = { version = "0.1.40", features = ["std"]}
tracing-core ="0.1.32"
tracing-opentelemetry = "0.26.0"
metrics = "0.23.0"
once_cell = "1.19.0"
tokio = { version = "1.38", features = ["rt", "rt-multi-thread", "macros"] }
tokio-macros= { version = "0.2.0-alpha.6" }
